--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -162,3 +162,11 @@ img{ max-width:100%;}
   height: 516px;
   overflow-y: auto;
 }
+
+.sweet-loading {
+  text-align: center;
+  /* margin-top: -1%; */
+  position: absolute;
+  margin-left: 45%;
+  margin-top: 15%;
+}
